# src/main/java/com/inditex/infraestructura/securization/JwtRequestFilter.java
@@ -1,6 +1,7 @@
 package com.inditex.infraestructura.securization;
 
 import java.io.IOException;
+
 import org.springframework.context.ApplicationContext;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.context.SecurityContextHolder;
@@ -8,28 +9,28 @@ import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
-import com.inditex.dominio.servicioimpl.JwtUserServiceImpl;
+
+import com.inditex.dominio.serviceImpl.JwtUserServiceImpl;
+
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import lombok.AllArgsConstructor;
 
-/**
- * Carlos Diaz https://github.com/carlos033?tab=repositories
- */
-@Component
-@AllArgsConstructor
-public class JwtRequestFilter extends OncePerRequestFilter{
-	private static final String AUTHORIZATION_HEADER  = "Authorization";
-	private static final String BEARER_PREFIX  = "Bearer";
+
+@Component @AllArgsConstructor
+public class JwtRequestFilter extends OncePerRequestFilter {
+	private static final String AUTHORIZATION_HEADER = "Authorization";
+	private static final String BEARER_PREFIX = "Bearer";
 	private JwtToken jwtTokenUtil;
 	private ApplicationContext applicationContext;
 
 	@Override
-	protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response,
-			FilterChain chain) throws ServletException, IOException {
-		final String requestTokenHeader = request.getHeader(AUTHORIZATION_HEADER );
+	protected void doFilterInternal(HttpServletRequest request,
+	        HttpServletResponse response, FilterChain chain)
+	        throws ServletException, IOException {
+		final String requestTokenHeader = request.getHeader(AUTHORIZATION_HEADER);
 
 		if (requestTokenHeader != null && requestTokenHeader.startsWith(BEARER_PREFIX)) {
 			String jwtToken = requestTokenHeader.substring(7);
@@ -44,13 +45,15 @@ public class JwtRequestFilter extends OncePerRequestFilter{
 	}
 
 	private boolean shouldAuthenticate(String identifier, String jwtToken) {
-		return identifier != null && SecurityContextHolder.getContext().getAuthentication() == null
-				&& jwtTokenUtil.validateToken(jwtToken, identifier);
+		return identifier != null
+		        && SecurityContextHolder.getContext().getAuthentication() == null
+		        && jwtTokenUtil.validateToken(jwtToken, identifier);
 	}
 
-	private void authenticateAndSetSecurityContext(HttpServletRequest request, String identifier,
-			String jwtToken) {
-		JwtUserServiceImpl jwtUserDetailsService = applicationContext.getBean(JwtUserServiceImpl.class);
+	private void authenticateAndSetSecurityContext(HttpServletRequest request,
+	        String identifier, String jwtToken) {
+		JwtUserServiceImpl jwtUserDetailsService =
+		        applicationContext.getBean(JwtUserServiceImpl.class);
 		UserDetails userDetails = jwtUserDetailsService.loadUserByUsername(identifier);
 
 		if (isTokenValid(jwtToken, identifier)) {
@@ -63,10 +66,12 @@ public class JwtRequestFilter extends OncePerRequestFilter{
 	}
 
 	private void setAuthenticationInSecurityContext(HttpServletRequest request,
-			UserDetails userDetails) {
+	        UserDetails userDetails) {
 		UsernamePasswordAuthenticationToken authenticationToken =
-				new UsernamePasswordAuthenticationToken(userDetails, null, userDetails.getAuthorities());
-		authenticationToken.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
+		        new UsernamePasswordAuthenticationToken(userDetails, null,
+		                userDetails.getAuthorities());
+		authenticationToken
+		        .setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
 		SecurityContextHolder.getContext().setAuthentication(authenticationToken);
 	}
 
